--- a/10_integration/m22_raw_integration_fm.Rmd
+++ b/10_integration/m22_raw_integration_fm.Rmd
@@ -98,51 +98,113 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 ```
 
 
-
-########START TRY SCT ########
-Integrated asexual to integrate with the rescued parasites
+################  START ### Get cells from the intergrated object  ################
 ```{r}
-## subset where field parasites are for slingshot
-# v3_m2_asex_harmony_ss_res_fld_pt <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_harmony_ss_res_fld_pt.RDS")
-# v3_m2_asex_harmony_ss_res_fld_pt <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_harmony_res_fld_pt.RDS")
-# v3_m2_asex_harmony_ss_res_fld_pt <- readRDS("data/processed/Pf/m2_all/all_msc_cb_no_dbt_mrg_noM12_asex.RDS")
-# v3_m2_asex_harmony_ss_res_fld_pt <- readRDS("data/processed/Pf/m2_all/all_msc_qcd_anotd_c_asex_mrg.RDS")
-# m2_asex_raw_jcC_mrg <- readRDS("data/processed/Pf/m2_all/all_msc_qcd_anotd_c_asex_mrg.RDS")
-# m2_asex_raw_jcO_mrg <- readRDS("data/processed/Pf/m2_all/all_msc_qcd_anotd_orig_asex_mrg.RDS")
-# m2_asex_raw_jcC_mrg <- readRDS("data/processed/Pf/m2_all/all_msc_qcd_anotd_c_asex_mrg3.RDS")
-# m2_asex_raw_jcO_mrg <- readRDS("data/processed/Pf/m2_all/all_msc_qcd_anotd_orig_asex_mrg3.RDS")
-
-
-# %in% c("MSC25" ,"MSC41", "MSC51")
+m2_all_raw_mrg <- readRDS("data/processed/Pf/m2_all/scvi2seu/all_jcC_seu_scvino_M55.RDS")
 
 ```
 
 ```{r}
-mrg_names <- c("jcC", "jcO")
-```
+DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new)
 
-```{r, message=F, warning=F}
-##Read BPcells matrices
-# all_msc_qcd_anotd <- list.files("data/processed/Pf", pattern = "all_msc_qcd_anotd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-# all_msc_qcd_anotd <- list.files("data/processed/Pf", pattern = "all_msc_qcd_anotd3.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-#   set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj/|all_msc_qcd_anot.*'))) %>% 
-# all_msc_qcd_anotd <- list.files("data/processed/Pf", pattern = "cln_anotd3_sct.RDS$", full.names = T, recursive = T, include.dirs = T) %>%
-m2_asex_raw_mrg <- list.files("data/processed/Pf/m2_all/", pattern = "all_msc_qcd_anotd_asex_jc.*mrg3.RDS$", full.names = T, recursive = T, include.dirs = T) %>%
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/|/all_msc_qcd_anotd_asex_|_mrg3.RDS'))) %>% 
-  # .[sample_name_all] %>%
-  .[mrg_names] %>%
-  map(readRDS)
 ```
 
 ```{r}
-m2_asex_raw_mrg[[1]]
+DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new, dims = c(1,2))
+
 ```
 
 ```{r}
-# m2_asex_raw_mrg <- list(m2_asex_raw_jcC_mrg, m2_asex_raw_jcO_mrg) %>% set_names(c("jcC", "jcO"))
+DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new, dims = c(1,2))
 
 ```
 
+
+```{r, warning=FALSE, message=FALSE}
+VlnPlot(m2_all_raw_mrg, features = "nFeature_RNA", group.by = "stage_fld", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
+```
+
+```{r, warning=FALSE, message=FALSE}
+VlnPlot(m2_all_raw_mrg, features = "nFeature_RNA", group.by = "leiden", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
+```
+
+```{r}
+all_sct_intgrtd_fem <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Female"]
+all_sct_intgrtd_femLE <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Female (LE)"]
+all_sct_intgrtd_male <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Male"]
+all_sct_intgrtd_maleLE <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Male (LE)"]
+
+```
+
+```{r}
+all_sct_intgrtd <- list(all_sct_intgrtd_fem, all_sct_intgrtd_femLE, all_sct_intgrtd_male, all_sct_intgrtd_maleLE) %>% set_names(c("fem", "femLE", "male", "maleLE"))
+
+```
+
+```{r}
+# names(all_sct_intgrtd)
+
+```
+##############################START Female DE ##########################
+
+```{r}
+map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
+```
+
+
+```{r}
+pmap(list(all_sct_intgrtd, c(5,5), c(-1,-0.5)),  ~DimPlot(..1, reduction = "scvi_umap", group.by = "leiden", label = F, pt.size = 0.4) + geom_vline(xintercept =  ..2) + geom_hline(yintercept =  ..3))
+```
+
+```{r}
+all_sct_intgrtd_fem <- pmap(list(all_sct_intgrtd, c(5,5), c(-1,-10), c(15,-0.5)),  ~..1[, ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_1"] > ..2 & ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_2"] > ..3 & ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_2"] < ..4]
+)
+```
+
+```{r}
+map(all_sct_intgrtd_fem, ~DimPlot(.x, reduction = "scvi_umap"))
+```
+
+```{r}
+map(all_sct_intgrtd_fem, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
+```
+
+```{r, warning=FALSE, message=FALSE}
+for (nm in names(all_sct_intgrtd_fem)) {
+  DefaultAssay(all_sct_intgrtd_fem[[nm]]) <- "RNA"
+  all_sct_intgrtd_fem[[nm]][["RNA"]]$data <- NULL
+  all_sct_intgrtd_fem[[nm]][["RNA"]]$scale.data <- NULL
+  all_sct_intgrtd_fem[[nm]][["SCT"]] <- NULL
+}
+```
+
+```{r, warning=FALSE, message=FALSE}
+all_sct_intgrtd_fem <- map(all_sct_intgrtd_fem, ~split(.x, f = .x$orig.ident))
+
+```
+
+```{r}
+# DefaultAssay(all_sct_intgrtd_fem) <- "RNA"
+# all_sct_intgrtd_fem[["SCT"]] <- NULL
+```
+
+
+```{r}
+map(all_sct_intgrtd_fem, ~table(.x$orig.ident))
+```
+
+```{r}
+## Donors with more than 50 cells
+don_50 <- map(all_sct_intgrtd_fem, ~table(.x$orig.ident) %>% data.frame() %>% filter(Freq >= 100) %>% pull(Var1) %>% as.character)
+```
+
+```{r}
+## Retain only donors with more than 50 cells
+all_sct_intgrtd_fem <- map2(all_sct_intgrtd_fem, don_50, ~subset(.x, subset = orig.ident %in% .y))
+```
+
+
+################  END ### Get cells from the intergrated object  ################
 ```{r}
 map(m2_asex_raw_mrg, ~.x@meta.data %>% count(orig.ident))
 ```
