--- a/10_integration/m22_raw_integration_fm.Rmd
+++ b/10_integration/m22_raw_integration_fm.Rmd
@@ -100,52 +100,62 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 
 ################  START ### Get cells from the intergrated object  ################
 ```{r}
-m2_all_raw_mrg <- readRDS("data/processed/Pf/m2_all/scvi2seu/all_jcC_seu_scvino_M55.RDS")
+# m2_all_raw_mrg <- readRDS("data/processed/Pf/m2_all/m2_all_raw_mrg.RDS")
+
+all_jcC_seu_scvi_noM55 <- readRDS("data/processed/Pf/m2_all/scvi2seu/all_jcC_seu_scvino_M55.RDS")
 
 ```
 
 ```{r}
-DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new)
+DimPlot(all_jcC_seu_scvi_noM55, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new)
 
 ```
 
 ```{r}
-DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new, dims = c(1,2))
+DimPlot(all_jcC_seu_scvi_noM55, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new, dims = c(1,2))
 
-```
-
-```{r}
-DimPlot(m2_all_raw_mrg, reduction = "scvi_umap", group.by = "stage_fld", cols = sp_col_new, dims = c(1,2))
-
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-VlnPlot(m2_all_raw_mrg, features = "nFeature_RNA", group.by = "stage_fld", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-VlnPlot(m2_all_raw_mrg, features = "nFeature_RNA", group.by = "leiden", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
+VlnPlot(all_jcC_seu_scvi_noM55, features = "nFeature_RNA", group.by = "stage_fld", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
+```
+
+```{r, warning=FALSE, message=FALSE}
+VlnPlot(all_jcC_seu_scvi_noM55, features = "nFeature_RNA", group.by = "leiden", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
 ```
 
 ```{r}
-all_sct_intgrtd_fem <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Female"]
-all_sct_intgrtd_femLE <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Female (LE)"]
-all_sct_intgrtd_male <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Male"]
-all_sct_intgrtd_maleLE <- m2_all_raw_mrg[, m2_all_raw_mrg$stage_fld  == "Male (LE)"]
+all_sct_intgrtd_fem <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Female"]
+all_sct_intgrtd_femLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Female (LE)"]
+all_sct_intgrtd_male <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Male"]
+all_sct_intgrtd_maleLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Male (LE)"]
 
 ```
 
 ```{r}
-all_sct_intgrtd <- list(all_sct_intgrtd_fem, all_sct_intgrtd_femLE, all_sct_intgrtd_male, all_sct_intgrtd_maleLE) %>% set_names(c("fem", "femLE", "male", "maleLE"))
+all_sct_intgrtd <- list(all_sct_intgrtd_fem, all_sct_intgrtd_femLE, all_sct_intgrtd_male, all_sct_intgrtd_maleLE) %>% set_names(c("f", "fLE", "m", "mLE"))
 
 ```
 
-```{r}
-# names(all_sct_intgrtd)
-
-```
 ##############################START Female DE ##########################
+
+```{r}
+map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
+```
+
+```{r}
+map(all_sct_intgrtd, ~.x@meta.data %>% count(leiden) %>% arrange(desc(n)))
+```
+
+
+```{r}
+clstrs2keep <- list(c(2, 4, 8, 9, 10, 14, 15), c(3), c(0, 6, 11), c(11))
+```
+
+```{r}
+## Subset clusters that correlate with stage. I.e remove clusters that group together with non-interest clusters
+all_sct_intgrtd <- map2(all_sct_intgrtd, clstrs2keep, ~subset(.x, subset = leiden %in% .y))
+```
 
 ```{r}
 map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
@@ -153,54 +163,45 @@ map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", 
 
 
 ```{r}
-pmap(list(all_sct_intgrtd, c(5,5), c(-1,-0.5)),  ~DimPlot(..1, reduction = "scvi_umap", group.by = "leiden", label = F, pt.size = 0.4) + geom_vline(xintercept =  ..2) + geom_hline(yintercept =  ..3))
+map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap"))
 ```
 
 ```{r}
-all_sct_intgrtd_fem <- pmap(list(all_sct_intgrtd, c(5,5), c(-1,-10), c(15,-0.5)),  ~..1[, ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_1"] > ..2 & ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_2"] > ..3 & ..1@reductions[["scvi_umap"]]@cell.embeddings[, "umap_2"] < ..4]
-)
-```
-
-```{r}
-map(all_sct_intgrtd_fem, ~DimPlot(.x, reduction = "scvi_umap"))
-```
-
-```{r}
-map(all_sct_intgrtd_fem, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
+map(all_sct_intgrtd, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-for (nm in names(all_sct_intgrtd_fem)) {
-  DefaultAssay(all_sct_intgrtd_fem[[nm]]) <- "RNA"
-  all_sct_intgrtd_fem[[nm]][["RNA"]]$data <- NULL
-  all_sct_intgrtd_fem[[nm]][["RNA"]]$scale.data <- NULL
-  all_sct_intgrtd_fem[[nm]][["SCT"]] <- NULL
+for (nm in names(all_sct_intgrtd)) {
+  DefaultAssay(all_sct_intgrtd[[nm]]) <- "RNA"
+  all_sct_intgrtd[[nm]][["RNA"]]$data <- NULL
+  all_sct_intgrtd[[nm]][["RNA"]]$scale.data <- NULL
+  all_sct_intgrtd[[nm]][["SCT"]] <- NULL
 }
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-all_sct_intgrtd_fem <- map(all_sct_intgrtd_fem, ~split(.x, f = .x$orig.ident))
+all_sct_intgrtd <- map(all_sct_intgrtd, ~split(.x, f = .x$orig.ident))
 
 ```
 
 ```{r}
-# DefaultAssay(all_sct_intgrtd_fem) <- "RNA"
-# all_sct_intgrtd_fem[["SCT"]] <- NULL
+# DefaultAssay(all_sct_intgrtd) <- "RNA"
+# all_sct_intgrtd[["SCT"]] <- NULL
 ```
 
 
 ```{r}
-map(all_sct_intgrtd_fem, ~table(.x$orig.ident))
+map(all_sct_intgrtd, ~table(.x$orig.ident))
 ```
 
 ```{r}
 ## Donors with more than 50 cells
-don_50 <- map(all_sct_intgrtd_fem, ~table(.x$orig.ident) %>% data.frame() %>% filter(Freq >= 100) %>% pull(Var1) %>% as.character)
+don_50 <- map(all_sct_intgrtd, ~table(.x$orig.ident) %>% data.frame() %>% filter(Freq >= 100) %>% pull(Var1) %>% as.character)
 ```
 
 ```{r}
 ## Retain only donors with more than 50 cells
-all_sct_intgrtd_fem <- map2(all_sct_intgrtd_fem, don_50, ~subset(.x, subset = orig.ident %in% .y))
+all_sct_intgrtd <- map2(all_sct_intgrtd, don_50, ~subset(.x, subset = orig.ident %in% .y))
 ```
 
 
